# picocalc_lvgl_text_editor

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  lv_port_indev_picocalc_kb.c  main.c
